# rubikscube

./: build_move_translator.cmd  build_scan_direct.cmd  build_scan_direct2.cmd  build_scan_direct3.cmd  build_scanner.cmd  compile_scan.cmd  compile_scan_log.cmd  compile_simple.cmd  run_scanner.cmd
Model/: RubiksCube.cpp
Model/Representation/: RubiksCube.h  RubiksCube3dArray.cpp  main.cpp
MoveTranslator/: CMakeLists.txt
MoveTranslator/apps/: instructions_cli.cpp
MoveTranslator/include/: MoveTranslator.h  OpenCVRenderer.h
MoveTranslator/src/: MoveTranslator.cpp  OpenCVRenderer.cpp
OpenCV/: CMakeLists.txt
OpenCV/apps/: scan_cube.cpp
OpenCV/include/OpenCV/: ColorScanner.h
OpenCV/src/: ColorScanner.cpp
Solver/: bfs_solver.h  dfs_solver.h
docs/: README_OPENCV_SCAN.md
